ad redis for exchange
